--- a/CongoActiveMapper.html
+++ b/CongoActiveMapper.html
@@ -22,12 +22,18 @@ class: center, middle, inverse, title-slide
 
 A crop field in the congo 
 
--This project builds upon the work done on the Mapping Africa project. \n
--The project seeks to implement the exsting Active Learning Framwork from Ghana to the Congo \n
--The project is computational powered by AWS (EC2 for compute and S3 for storage) and has a large human feedbackloop.There are four major mapping components: \n
-    1) image acquisition and pre-processing \n
-    2) training data \n
-    3) machine learning \n
+-This project builds upon the work done on the Mapping Africa project.
+&amp;nbsp;
+-The project seeks to implement the exsting Active Learning Framwork from Ghana to the Congo
+&amp;nbsp;
+-The project is computational powered by AWS (EC2 for compute and S3 for storage) and has a large human feedbackloop.There are four major mapping components:
+&amp;nbsp;
+    1) image acquisition and pre-processing 
+&amp;nbsp;
+    2) training data 
+&amp;nbsp;
+    3) machine learning
+&amp;nbsp;
     4) segmentation 
 
 
@@ -44,11 +50,14 @@ Above is the overal AOI
 
 ---
 
-## 1 Image acquisition - Noah
-  -The first stage is Image acquisition
-  -This was completed using EC2 and Planet Scope Imagery.Planet Scope Satellites are box satellites provide high temporal and spatial resolution for cropland identification. \n
-  - Two time frames: \n
-     1) Dry season (December-February) \n
+## 1) Image acquisition - Noah
+-The first stage is Image acquisition
+-This was completed using EC2 and Planet Scope Imagery.Planet Scope Satellites are box satellites provide high temporal and spatial resolution for cropland identification. 
+&amp;nbsp;
+-Two time frames: 
+&amp;nbsp;
+     1) Dry season (December-February)
+&amp;nbsp;     
      2) Wet season (May - September)
   
 
@@ -66,7 +75,7 @@ Composite image on the right is growing season, and on the left is non-growing s
 
 ---
 
-## 2 Training data collection -Priyanka and Wei Hong
+## 2) Training data collection -Priyanka and Wei Hong
 
 
 -The images were then process in Amazon EC2, 200 training sites were randomly selected from the AOIs. \n
@@ -84,12 +93,14 @@ Composite image on the right is growing season, and on the left is non-growing s
  
 --- 
 
-## Machine learning/ (Future)
--In this stage the human / machine and machine connection is established \n
+
+## 3) Machine learning/ (Future)
+-In this stage the human / machine and machine connection is established
+&amp;nbsp;
 -A "custom crowdsourcing platfrom" is created(Estes 8)
 
 -This platfrom is called labeller wich is built around human assessors that complete tasks, includes building data for understanding accuracy and data training
-- Mapper is established for classfication, which uses a random forest algorithm. In this case, it has 80 trees.
+-Mapper is established for classfication, which uses a random forest algorithm. In this case, it has 80 trees.
 
 
 ---
@@ -105,7 +116,7 @@ Composite image on the right is growing season, and on the left is non-growing s
 ---
 
 ## Thank you
- -Lyndon, Su and Lei
+-Lyndon, Su and Lei
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
